temporary fix for horizontal scrolling

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,8 @@
 
 body {
   margin: 0;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 /* navbar styling */
@@ -51,7 +53,7 @@ body {
   bottom: -40px;
 }
 
-/* hamburger styling */
+/* hamburger styling  */
 .hamburger {
   height: 70%;
   width: 6%;
@@ -82,7 +84,7 @@ body {
 
 .book-content {
   margin-top: 160px;
-  width: 450px;
+  width: 50%;
   height: 250px;
   font-family: "Raleway", sans-serif;
   font-weight: 500;
@@ -357,6 +359,7 @@ body {
 
   .christmas-content-container {
     flex-direction: column;
+    margin-top: 100px;
   }
 
   .christmas-content-image {
